crates/code-graph-tools/tests/snapshots/snapshot_responses__response_generate_diagram_rust_trait_compute.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: normalized
---
[
  {
    "direction": "calls",
    "from": "Bar<T>",
    "label": "inherits",
    "to": "Compute"
  },
  {
    "direction": "calls",
    "from": "Foo<T>",
    "label": "inherits",
    "to": "Compute"
  }
]
