crates/code-graph-tools/tests/snapshots/snapshot_responses__response_generate_diagram_symbol_edges.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 1250
expression: normalized
---
[
  {
    "candidates": 1,
    "direction": "calls",
    "from": "Engine::update",
    "label": "calls",
    "to": "clamp"
  },
  {
    "candidates": 1,
    "direction": "calls",
    "from": "Engine::update",
    "label": "calls",
    "to": "lerp"
  },
  {
    "candidates": 1,
    "direction": "called_by",
    "from": "main",
    "label": "calls",
    "to": "Engine::update"
  }
]
