crates/code-graph-tools/tests/snapshots/snapshot_responses__response_generate_diagram_symbol_mermaid.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: normalized
---
graph TD
    n0 -->|calls| n1
    n0 -->|calls| n2
    n0["Engine::update"]
    n1["lerp"]
    n2["clamp"]
    n3 -.->|called by| n0
    n3["main"]
