crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_callees_byte_budget_truncated.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 1114
expression: parsed
---
{
  "limit": 50,
  "next_offset": 3,
  "offset": 0,
  "results": [
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 3,
      "symbol_id": "[testdata]/hub.cpp:callee_000"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 4,
      "symbol_id": "[testdata]/hub.cpp:callee_001"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 5,
      "symbol_id": "[testdata]/hub.cpp:callee_002"
    }
  ],
  "total": 60,
  "truncated": true
}
