crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_callees_engine_update.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 496
expression: parsed
---
{
  "limit": 100,
  "next_offset": null,
  "offset": 0,
  "results": [
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/engine.cpp",
      "line": 9,
      "symbol_id": "[testdata]/utils.cpp:clamp"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/engine.cpp",
      "line": 7,
      "symbol_id": "[testdata]/utils.cpp:lerp"
    }
  ],
  "total": 2,
  "truncated": false
}
