crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_callees_paginated_offset.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 1066
expression: parsed
---
{
  "limit": 50,
  "next_offset": null,
  "offset": 50,
  "results": [
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 53,
      "symbol_id": "[testdata]/hub.cpp:callee_050"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 54,
      "symbol_id": "[testdata]/hub.cpp:callee_051"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 55,
      "symbol_id": "[testdata]/hub.cpp:callee_052"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 56,
      "symbol_id": "[testdata]/hub.cpp:callee_053"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 57,
      "symbol_id": "[testdata]/hub.cpp:callee_054"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 58,
      "symbol_id": "[testdata]/hub.cpp:callee_055"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 59,
      "symbol_id": "[testdata]/hub.cpp:callee_056"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 60,
      "symbol_id": "[testdata]/hub.cpp:callee_057"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 61,
      "symbol_id": "[testdata]/hub.cpp:callee_058"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 62,
      "symbol_id": "[testdata]/hub.cpp:callee_059"
    }
  ],
  "total": 60,
  "truncated": false
}
