crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_callers_byte_budget_truncated.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 1042
expression: parsed
---
{
  "limit": 50,
  "next_offset": 3,
  "offset": 0,
  "results": [
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 64,
      "symbol_id": "[testdata]/hub.cpp:caller_000"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 65,
      "symbol_id": "[testdata]/hub.cpp:caller_001"
    },
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 66,
      "symbol_id": "[testdata]/hub.cpp:caller_002"
    }
  ],
  "total": 60,
  "truncated": true
}
