crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_callers_engine_update.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 472
expression: parsed
---
{
  "limit": 100,
  "next_offset": null,
  "offset": 0,
  "results": [
    {
      "candidates": 1,
      "depth": 1,
      "file": "[testdata]/main.cpp",
      "line": 11,
      "symbol_id": "[testdata]/main.cpp:main"
    }
  ],
  "total": 1,
  "truncated": false
}
